[gd_scene load_steps=9 format=2]

[ext_resource path="res://app.gd" type="Script" id=1]
[ext_resource path="res://NewTodoForm.gd" type="Script" id=2]
[ext_resource path="res://Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="AppContainer" type="VBoxContainer" parent="."]
margin_right = 680.0
margin_bottom = 730.0

[node name="NewTodoForm" type="HSplitContainer" parent="AppContainer"]
editor/display_folded = true
margin_right = 680.0
margin_bottom = 46.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="NewTodoInput" type="LineEdit" parent="AppContainer/NewTodoForm"]
margin_right = 538.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AddTodoBtn" type="Button" parent="AppContainer/NewTodoForm"]
margin_left = 550.0
margin_right = 680.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ADD"
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="AppContainer"]
margin_top = 50.0
margin_right = 680.0
margin_bottom = 702.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TodoListView" type="VBoxContainer" parent="AppContainer/ScrollContainer"]
margin_right = 680.0
margin_bottom = 652.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsContainer" type="HBoxContainer" parent="AppContainer"]
margin_top = 706.0
margin_right = 680.0
margin_bottom = 730.0
alignment = 2
__meta__ = {
"_edit_lock_": true
}

[node name="TotalCount" type="Label" parent="AppContainer/StatsContainer"]
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "TOTAL: 0"

[node name="TodoCount" type="Label" parent="AppContainer/StatsContainer"]
margin_left = 228.0
margin_right = 452.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "TODO: 0"
align = 1

[node name="CompletedCount" type="Label" parent="AppContainer/StatsContainer"]
margin_left = 456.0
margin_right = 680.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Completed: 0"
align = 2
[connection signal="new_todo_created" from="AppContainer/NewTodoForm" to="." method="_on_NewTodoForm_new_todo_created"]
[connection signal="button_up" from="AppContainer/NewTodoForm/AddTodoBtn" to="AppContainer/NewTodoForm" method="_on_AddTodoBtn_button_up"]
